[package]
name = "nalgebra_latex"
version = "0.1.6"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv
description = "A library with several robust formatters for nalgebra::Matrix, LaTeX environments, and more"
documentation = "https://docs.rs/nalgebra_latex"
readme = "README.md"
repository = "https://github.com/JohnScience/nalgebra_latex"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["nalgebra", "latex", "matrix"]
categories = ["mathematics",  "no-std", "science", "value-formatting"] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
include = [
    "/Cargo.toml",
    "/LICENSE_APACHE",
    "/LICENSE_MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]
# publish | not needed
# metadata | not needed
# default-run | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false
# resolver | not needed

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.0"
nalgebra_linsys = { version = "0.1.1", optional = true }
thiserror = { version = "1.0.31", optional = true }
either = { version = "1.6.1", optional = true }

[dev-dependencies]
execute_evcxr = "0.1.0"

[features]
lin_sys = ["nalgebra_linsys", "thiserror", "either"]
nightly = ["adt_const_params"]
evcxr = []
adt_const_params = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]
